code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__agents_terminal_overlay_full_details.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: "&output"
---
 +--------------------------------------------------------------------------------------------+
 |                                            Code                                            |
 +--------------------------------------------------------------------------------------------+
 + Agents - Ctrl+A to close-------------------------------------------------------------------+
 |                                                                                            |
 |  Docs Sweep                 + Agent History ---------------------------------------------+ |
 | › ★ Overview                | Docs Sweep  2 agents                                       | |
 |   • code-gpt-5.1-code-max   | Models: code-gpt-5.1-code-max, code-gpt-5.1-code-mini      | |
 |   • code-gpt-5.1-code-mini  |                                                            | |
 |                             | Context                                                    | |
 |                             |   Focus on October 2025 product changes                    | |
 |                             |                                                            | |
 |                             | Action History                                             | |
 |                             |                                                            | |
 |                             | [MM:SS] code-gpt-5.1-code-max status: Status → Running  | |
 |                             |                                                            | |
 |                             | [MM:SS] code-gpt-5.1-code-max detail: ...                     | |
 |                                                                                            |
 |                             |                                            Reviewing eng   | |
 |                             |updates                                                     | |
 |                             |                                                            | |
 |                             | [MM:SS] code-gpt-5.1-code-mini status: Status → Pending | |
 |                             |                                                            | |
 |                             | [MM:SS] code-gpt-5.1-code-max status: Status → Completed| |
 |                             |                                                            | |
 |                             +------------------------------------------------------------+ |
 | ↑/↓ Navigate/Scroll  →/Enter Focus output  ← Back to list  Tab Next agent  PgUp/PgDn Page  |
 |                                                                                            |
 +--------------------------------------------------------------------------------------------+
