code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__settings_help_overlay_closed.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: closed
---
 +------------------------------------------------------------------------------------------------+
 |                                              Code                                              |
 +------------------------------------------------------------------------------------------------+
 +Settings ▸ Overview-----------------------------------------------------------------------------+
 |                                                                                                |
 | › Model              Model: GPT-5.1-Codex (Medium)                                             |
 |   + Choose the language model used for new completions.                                        |
 |                                                                                                |
 |   Theme              Theme: Light - Photon (16-color) · Spinner: Diamond                       |
 |   + Switch between preset color palettes and adjust contrast.                                  |
 |                                                                                                |
 |   Updates            Auto update: Disabled                                                     |
 |   + Control CLI auto-update cadence and release channels.                                      |
 |                                                                                                |
 |                                                                                                |

 |   Agents             Enabled: 2/3                                                              |
 |   + Configure linked agents and default task permissions.                                      |
 |                                                                                                |
 | ↑ ↓ Move    Enter Open    Esc Close    ? Help                                                  |
 |                                                                                                |
 +------------------------------------------------------------------------------------------------+

 +------------------------------------------------------------------------------------------------+
 | What can I code for you today?                                                                 |
 +------------------------------------------------------------------------------------------------+
   Read Only  (Shift+Tab change)                                           Ctrl+H help  •  API key
