code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__settings_help_overlay_open.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: open
---
 +------------------------------------------------------------------------------------------------+
 |                                              Code                                              |
 +------------------------------------------------------------------------------------------------+
 +Settings ▸ Overview-----------------------------------------------------------------------------+
 |                                                                                                |
 | › Model              Model: GPT-5.1-Code (Medium)                                              |
 |   + Choose the language model used for new completions.                                        |
 |                           +----------------------------------------+                           |
 |   Theme              Theme|Settings Overview                       |mond                       |
 |   + Switch between preset |                                        |                           |
 |                           |• ↑/↓  Move between sections            |                           |
 |   Updates            Auto |• Enter  Open selected section          |                           |
 |   + Control CLI auto-updat|• Tab    Jump forward between sections  |                           |
 |                           |• Esc    Close settings                 |                           |
 |   ------------------------|• ?      Toggle this help               |-------------------------- |
 |                           |                                        |                           |
 |   Agents             Enabl|Press Esc to close                      |                           |
 |   + Configure linked agent+----------------------------------------+                           |
 |                                                                                                |
 | ↑ ↓ Move    Enter Open    Esc Close    ? Help                                                  |
 |                                                                                                |
 +------------------------------------------------------------------------------------------------+

 +------------------------------------------------------------------------------------------------+
 | What can I code for you today?                                                                 |
 +------------------------------------------------------------------------------------------------+
   Read Only  (Shift+Tab change)                                           Ctrl+H help  •  API key
