code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__settings_help_overlay_section_closed.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: section_closed
---
 +------------------------------------------------------------------------------------------------+
 |                                              Code                                              |
 +------------------------------------------------------------------------------------------------+
 +Settings ▸ Model--------------------------------------------------------------------------------+
 |                                                                                                |
 | ›  Model              + Select Model & Reasoning --------------------------------------------+ |
 |    Theme              |                                                                      | |
 |    Updates            |  Current model: GPT-5.1-Code                                         | |
 |    Agents             |  Reasoning effort: Medium                                            | |
 |    Prompts            |                                                                      | |
 |    Auto Drive         |  GPT-5.1-Code                                                        | |
 |    Review             |  Optimized for Code.                                                 | |
 |    Planning           |     High - Maximizes reasoning depth for complex or ambiguous proble | |
 |    Validation         |     Medium (current) - Dynamically adjusts reasoning based on the ta | |
 |    Chrome             |     Low - Fastest responses with limited reasoning                   | |
 |    MCP                |                                                                      | |
 |    Notifications      |  GPT-5.1-Code-Mini                                                   | |
 |    Limits             |                                                                      | |
 |                       +----------------------------------------------------------------------+ |
 | ↑ ↓ Move    Enter Open    Esc Close    ? Help                                                  |
 |                                                                                                |
 +------------------------------------------------------------------------------------------------+

 +------------------------------------------------------------------------------------------------+
 | What can I code for you today?                                                                 |
 +------------------------------------------------------------------------------------------------+
   Read Only  (Shift+Tab change)                                           Ctrl+H help  •  API key
